syntax = "proto3";

import "bottle/assembly/v1/build.proto";

package bottle.assembly.v1;

message BuildListRequest {
  string request_id = 1;

  repeated Build.BuildStatus status = 2;
}

message BuildListResponse {
  string request_id = 1;
  bottle.assembly.v1.Build build = 2;
}
